--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                         <p class="testimony__review">Desarrolladora web. Actualmente me encuentro realizando mis estudios en ingeniería de sistemas. Poseo amplios conocimientos en HTML, CSS, Javascript y CMS Wordpress. Mi objetivo es crear soluciones web atractivas y efectivas, brindando una experiencia de usuario excepcional.</p>
                     </div>
                     <figure class="testimony__picture">
-                        <img src="./images/Paula.jpeg" class="testimony__img">
+                        <img src="./images/pach.jpeg" class="testimony__img">
                     </figure>
                 </section>
 
@@ -252,13 +252,7 @@
             <nav class="nav nav--footer">
                 <h2 class="footer__title">Paula C.</h2>
                 <ul class="nav__link nav__link--footer">
-
-                    <li class="nav__items">
-                        <a href="#" class="nav__links">Inicio</a>
-                    </li>
-                    <li class="nav__items">
-                        <a href="#" class="nav__links">Acerca de</a>
-                    </li>
+                    
                     <li class="nav__items">
                         <a href="https://api.whatsapp.com/send?phone=3184973055" class="nav__links">Contacto</a>
                     </li>
